antlr/ShellParser.java
// Generated from antlr/ShellParser.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class ShellParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IF=1, THEN=2, ELIF=3, ELSE=4, FI=5, FOR=6, IN=7, WHILE=8, DO=9, DONE=10, 
		CASE=11, ESAC=12, FUNCTION=13, ASSIGN=14, PIPE=15, AND=16, OR=17, SEMI=18, 
		LESS=19, GREATER=20, APPEND=21, REDIRECT_ERR=22, REDIRECT_BOTH=23, LPAREN=24, 
		RPAREN=25, LBRACE=26, RBRACE=27, LBRACKET=28, RBRACKET=29, DOLLAR_LPAREN=30, 
		DOUBLE_LBRACKET=31, DOUBLE_RBRACKET=32, NEWLINE=33, ECHO=34, CD=35, PWD=36, 
		LS=37, MKDIR=38, RM=39, CP=40, MV=41, GREP=42, SED=43, CAT=44, CHMOD=45, 
		EXPORT=46, READ=47, SOURCE=48, TEST=49, DOLLAR=50, DOLLAR_LBRACE=51, RBRACE_VAR=52, 
		DOUBLE_QUOTE=53, SINGLE_QUOTE=54, BACKTICK=55, NUMBER=56, COMMENT=57, 
		IDENTIFIER=58, ARGUMENT=59, WS=60, OTHER=61, DOUBLE_QUOTE_CONTENT=62, 
		DOUBLE_QUOTE_ESCAPE=63, SINGLE_QUOTE_CONTENT=64, BACKTICK_CONTENT=65;
	public static final int
		RULE_script = 0, RULE_complete_command = 1, RULE_list = 2, RULE_list_item = 3, 
		RULE_pipeline = 4, RULE_pipeline_item = 5, RULE_command = 6, RULE_simple_command = 7, 
		RULE_cmd_name = 8, RULE_cmd_prefix = 9, RULE_cmd_suffix = 10, RULE_redirect = 11, 
		RULE_compound_command = 12, RULE_if_statement = 13, RULE_elif_part = 14, 
		RULE_else_part = 15, RULE_while_loop = 16, RULE_for_loop = 17, RULE_case_statement = 18, 
		RULE_case_item = 19, RULE_pattern_list = 20, RULE_brace_group = 21, RULE_subshell = 22, 
		RULE_function_definition = 23, RULE_function_body = 24, RULE_variable_assignment = 25, 
		RULE_list_sequence = 26, RULE_separator = 27, RULE_argument_list = 28;
	private static String[] makeRuleNames() {
		return new String[] {
			"script", "complete_command", "list", "list_item", "pipeline", "pipeline_item", 
			"command", "simple_command", "cmd_name", "cmd_prefix", "cmd_suffix", 
			"redirect", "compound_command", "if_statement", "elif_part", "else_part", 
			"while_loop", "for_loop", "case_statement", "case_item", "pattern_list", 
			"brace_group", "subshell", "function_definition", "function_body", "variable_assignment", 
			"list_sequence", "separator", "argument_list"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'if'", "'then'", "'elif'", "'else'", "'fi'", "'for'", "'in'", 
			"'while'", "'do'", "'done'", "'case'", "'esac'", "'function'", "'='", 
			"'|'", "'&&'", "'||'", "';'", "'<'", "'>'", "'>>'", "'2>'", "'&>'", "'('", 
			"')'", "'{'", null, "'['", "']'", "'$('", "'[['", "']]'", null, "'echo'", 
			"'cd'", "'pwd'", "'ls'", "'mkdir'", "'rm'", "'cp'", "'mv'", "'grep'", 
			"'sed'", "'cat'", "'chmod'", "'export'", "'read'", null, "'test'", null, 
			"'${'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IF", "THEN", "ELIF", "ELSE", "FI", "FOR", "IN", "WHILE", "DO", 
			"DONE", "CASE", "ESAC", "FUNCTION", "ASSIGN", "PIPE", "AND", "OR", "SEMI", 
			"LESS", "GREATER", "APPEND", "REDIRECT_ERR", "REDIRECT_BOTH", "LPAREN", 
			"RPAREN", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", "DOLLAR_LPAREN", 
			"DOUBLE_LBRACKET", "DOUBLE_RBRACKET", "NEWLINE", "ECHO", "CD", "PWD", 
			"LS", "MKDIR", "RM", "CP", "MV", "GREP", "SED", "CAT", "CHMOD", "EXPORT", 
			"READ", "SOURCE", "TEST", "DOLLAR", "DOLLAR_LBRACE", "RBRACE_VAR", "DOUBLE_QUOTE", 
			"SINGLE_QUOTE", "BACKTICK", "NUMBER", "COMMENT", "IDENTIFIER", "ARGUMENT", 
			"WS", "OTHER", "DOUBLE_QUOTE_CONTENT", "DOUBLE_QUOTE_ESCAPE", "SINGLE_QUOTE_CONTENT", 
			"BACKTICK_CONTENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ShellParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ShellParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ScriptContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ShellParser.EOF, 0); }
		public List<Complete_commandContext> complete_command() {
			return getRuleContexts(Complete_commandContext.class);
		}
		public Complete_commandContext complete_command(int i) {
			return getRuleContext(Complete_commandContext.class,i);
		}
		public ScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_script; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShellParserListener ) ((ShellParserListener)listener).enterScript(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShellParserListener ) ((ShellParserListener)listener).exitScript(this);
		}
	}

	public final ScriptContext script() throws RecognitionException {
		ScriptContext _localctx = new ScriptContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_script);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 289356258978834754L) != 0)) {
				{
				{
				setState(58);
				complete_command();
				}
				}
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(64);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Complete_commandContext extends ParserRuleContext {
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(ShellParser.NEWLINE, 0); }
		public TerminalNode SEMI() { return getToken(ShellParser.SEMI, 0); }
		public TerminalNode EOF() { return getToken(ShellParser.EOF, 0); }
		public Complete_commandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_complete_command; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShellParserListener ) ((ShellParserListener)listener).enterComplete_command(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShellParserListener ) ((ShellParserListener)listener).exitComplete_command(this);
		}
	}

	public final Complete_commandContext complete_command() throws RecognitionException {
		Complete_commandContext _localctx = new Complete_commandContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_complete_command);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			list();
			setState(67);
			_la = _input.LA(1);
			if ( !(((((_la - -1)) & ~0x3f) == 0 && ((1L << (_la - -1)) & 17180393473L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListContext extends ParserRuleContext {
		public List<List_itemContext> list_item() {
			return getRuleContexts(List_itemContext.class);
		}
		public List_itemContext list_item(int i) {
			return getRuleContext(List_itemContext.class,i);
		}
		public List<TerminalNode> AND() { return getTokens(ShellParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(ShellParser.AND, i);
		}
		public List<TerminalNode> OR() { return getTokens(ShellParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(ShellParser.OR, i);
		}
		public ListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShellParserListener ) ((ShellParserListener)listener).enterList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShellParserListener ) ((ShellParserListener)listener).exitList(this);
		}
	}

	public final ListContext list() throws RecognitionException {
		ListContext _localctx = new ListContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			list_item();
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AND || _la==OR) {
				{
				{
				setState(70);
				_la = _input.LA(1);
				if ( !(_la==AND || _la==OR) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(71);
				list_item();
				}
				}
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class List_itemContext extends ParserRuleContext {
		public PipelineContext pipeline() {
			return getRuleContext(PipelineContext.class,0);
		}
		public List_itemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list_item; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShellParserListener ) ((ShellParserListener)listener).enterList_item(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShellParserListener ) ((ShellParserListener)listener).exitList_item(this);
		}
	}

	public final List_itemContext list_item() throws RecognitionException {
		List_itemContext _localctx = new List_itemContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_list_item);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			pipeline();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PipelineContext extends ParserRuleContext {
		public List<Pipeline_itemContext> pipeline_item() {
			return getRuleContexts(Pipeline_itemContext.class);
		}
		public Pipeline_itemContext pipeline_item(int i) {
			return getRuleContext(Pipeline_itemContext.class,i);
		}
		public List<TerminalNode> PIPE() { return getTokens(ShellParser.PIPE); }
		public TerminalNode PIPE(int i) {
			return getToken(ShellParser.PIPE, i);
		}
		public PipelineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pipeline; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShellParserListener ) ((ShellParserListener)listener).enterPipeline(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShellParserListener ) ((ShellParserListener)listener).exitPipeline(this);
		}
	}

	public final PipelineContext pipeline() throws RecognitionException {
		PipelineContext _localctx = new PipelineContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_pipeline);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			pipeline_item();
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PIPE) {
				{
				{
				setState(80);
				match(PIPE);
				setState(81);
				pipeline_item();
				}
				}
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Pipeline_itemContext extends ParserRuleContext {
		public CommandContext command() {
			return getRuleContext(CommandContext.class,0);
		}
		public Pipeline_itemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pipeline_item; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShellParserListener ) ((ShellParserListener)listener).enterPipeline_item(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShellParserListener ) ((ShellParserListener)listener).exitPipeline_item(this);
		}
	}

	public final Pipeline_itemContext pipeline_item() throws RecognitionException {
		Pipeline_itemContext _localctx = new Pipeline_itemContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_pipeline_item);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			command();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CommandContext extends ParserRuleContext {
		public Simple_commandContext simple_command() {
			return getRuleContext(Simple_commandContext.class,0);
		}
		public Compound_commandContext compound_command() {
			return getRuleContext(Compound_commandContext.class,0);
		}
		public Function_definitionContext function_definition() {
			return getRuleContext(Function_definitionContext.class,0);
		}
		public Variable_assignmentContext variable_assignment() {
			return getRuleContext(Variable_assignmentContext.class,0);
		}
		public CommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_command; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShellParserListener ) ((ShellParserListener)listener).enterCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShellParserListener ) ((ShellParserListener)listener).exitCommand(this);
		}
	}

	public final CommandContext command() throws RecognitionException {
		CommandContext _localctx = new CommandContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_command);
		try {
			setState(93);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(89);
				simple_command();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(90);
				compound_command();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(91);
				function_definition();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(92);
				variable_assignment();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Simple_commandContext extends ParserRuleContext {
		public Cmd_nameContext cmd_name() {
			return getRuleContext(Cmd_nameContext.class,0);
		}
		public Cmd_prefixContext cmd_prefix() {
			return getRuleContext(Cmd_prefixContext.class,0);
		}
		public Cmd_suffixContext cmd_suffix() {
			return getRuleContext(Cmd_suffixContext.class,0);
		}
		public Simple_commandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simple_command; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShellParserListener ) ((ShellParserListener)listener).enterSimple_command(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShellParserListener ) ((ShellParserListener)listener).exitSimple_command(this);
		}
	}

	public final Simple_commandContext simple_command() throws RecognitionException {
		Simple_commandContext _localctx = new Simple_commandContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_simple_command);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 16252928L) != 0)) {
				{
				setState(95);
				cmd_prefix();
				}
			}

			setState(98);
			cmd_name();
			setState(100);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(99);
				cmd_suffix();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Cmd_nameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(ShellParser.IDENTIFIER, 0); }
		public TerminalNode ECHO() { return getToken(ShellParser.ECHO, 0); }
		public TerminalNode CD() { return getToken(ShellParser.CD, 0); }
		public TerminalNode PWD() { return getToken(ShellParser.PWD, 0); }
		public TerminalNode LS() { return getToken(ShellParser.LS, 0); }
		public TerminalNode MKDIR() { return getToken(ShellParser.MKDIR, 0); }
		public TerminalNode RM() { return getToken(ShellParser.RM, 0); }
		public TerminalNode CP() { return getToken(ShellParser.CP, 0); }
		public TerminalNode MV() { return getToken(ShellParser.MV, 0); }
		public TerminalNode GREP() { return getToken(ShellParser.GREP, 0); }
		public TerminalNode SED() { return getToken(ShellParser.SED, 0); }
		public TerminalNode CAT() { return getToken(ShellParser.CAT, 0); }
		public TerminalNode CHMOD() { return getToken(ShellParser.CHMOD, 0); }
		public TerminalNode EXPORT() { return getToken(ShellParser.EXPORT, 0); }
		public TerminalNode READ() { return getToken(ShellParser.READ, 0); }
		public TerminalNode SOURCE() { return getToken(ShellParser.SOURCE, 0); }
		public TerminalNode TEST() { return getToken(ShellParser.TEST, 0); }
		public Cmd_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmd_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShellParserListener ) ((ShellParserListener)listener).enterCmd_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShellParserListener ) ((ShellParserListener)listener).exitCmd_name(this);
		}
	}

	public final Cmd_nameContext cmd_name() throws RecognitionException {
		Cmd_nameContext _localctx = new Cmd_nameContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_cmd_name);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 289356258878685184L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Cmd_prefixContext extends ParserRuleContext {
		public List<RedirectContext> redirect() {
			return getRuleContexts(RedirectContext.class);
		}
		public RedirectContext redirect(int i) {
			return getRuleContext(RedirectContext.class,i);
		}
		public Cmd_prefixContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmd_prefix; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShellParserListener ) ((ShellParserListener)listener).enterCmd_prefix(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShellParserListener ) ((ShellParserListener)listener).exitCmd_prefix(this);
		}
	}

	public final Cmd_prefixContext cmd_prefix() throws RecognitionException {
		Cmd_prefixContext _localctx = new Cmd_prefixContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_cmd_prefix);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(104);
				redirect();
				}
				}
				setState(107); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 16252928L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Cmd_suffixContext extends ParserRuleContext {
		public List<TerminalNode> ARGUMENT() { return getTokens(ShellParser.ARGUMENT); }
		public TerminalNode ARGUMENT(int i) {
			return getToken(ShellParser.ARGUMENT, i);
		}
		public List<RedirectContext> redirect() {
			return getRuleContexts(RedirectContext.class);
		}
		public RedirectContext redirect(int i) {
			return getRuleContext(RedirectContext.class,i);
		}
		public Cmd_suffixContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmd_suffix; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShellParserListener ) ((ShellParserListener)listener).enterCmd_suffix(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShellParserListener ) ((ShellParserListener)listener).exitCmd_suffix(this);
		}
	}

	public final Cmd_suffixContext cmd_suffix() throws RecognitionException {
		Cmd_suffixContext _localctx = new Cmd_suffixContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_cmd_suffix);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(111); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					setState(111);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case ARGUMENT:
						{
						setState(109);
						match(ARGUMENT);
						}
						break;
					case LESS:
					case GREATER:
					case APPEND:
					case REDIRECT_ERR:
					case REDIRECT_BOTH:
						{
						setState(110);
						redirect();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(113); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RedirectContext extends ParserRuleContext {
		public TerminalNode LESS() { return getToken(ShellParser.LESS, 0); }
		public TerminalNode ARGUMENT() { return getToken(ShellParser.ARGUMENT, 0); }
		public TerminalNode GREATER() { return getToken(ShellParser.GREATER, 0); }
		public TerminalNode APPEND() { return getToken(ShellParser.APPEND, 0); }
		public TerminalNode REDIRECT_ERR() { return getToken(ShellParser.REDIRECT_ERR, 0); }
		public TerminalNode REDIRECT_BOTH() { return getToken(ShellParser.REDIRECT_BOTH, 0); }
		public RedirectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_redirect; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShellParserListener ) ((ShellParserListener)listener).enterRedirect(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShellParserListener ) ((ShellParserListener)listener).exitRedirect(this);
		}
	}

	public final RedirectContext redirect() throws RecognitionException {
		RedirectContext _localctx = new RedirectContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_redirect);
		try {
			setState(125);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LESS:
				enterOuterAlt(_localctx, 1);
				{
				setState(115);
				match(LESS);
				setState(116);
				match(ARGUMENT);
				}
				break;
			case GREATER:
				enterOuterAlt(_localctx, 2);
				{
				setState(117);
				match(GREATER);
				setState(118);
				match(ARGUMENT);
				}
				break;
			case APPEND:
				enterOuterAlt(_localctx, 3);
				{
				setState(119);
				match(APPEND);
				setState(120);
				match(ARGUMENT);
				}
				break;
			case REDIRECT_ERR:
				enterOuterAlt(_localctx, 4);
				{
				setState(121);
				match(REDIRECT_ERR);
				setState(122);
				match(ARGUMENT);
				}
				break;
			case REDIRECT_BOTH:
				enterOuterAlt(_localctx, 5);
				{
				setState(123);
				match(REDIRECT_BOTH);
				setState(124);
				match(ARGUMENT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Compound_commandContext extends ParserRuleContext {
		public If_statementContext if_statement() {
			return getRuleContext(If_statementContext.class,0);
		}
		public While_loopContext while_loop() {
			return getRuleContext(While_loopContext.class,0);
		}
		public For_loopContext for_loop() {
			return getRuleContext(For_loopContext.class,0);
		}
		public Case_statementContext case_statement() {
			return getRuleContext(Case_statementContext.class,0);
		}
		public Brace_groupContext brace_group() {
			return getRuleContext(Brace_groupContext.class,0);
		}
		public SubshellContext subshell() {
			return getRuleContext(SubshellContext.class,0);
		}
		public Compound_commandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compound_command; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShellParserListener ) ((ShellParserListener)listener).enterCompound_command(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShellParserListener ) ((ShellParserListener)listener).exitCompound_command(this);
		}
	}
